# ultimate-focus-timer

./: .flake8  .gitignore  .pre-commit-config.yaml  .session.state  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DAEMON_FIX_SUMMARY.md  DAEMON_GUIDE.md  DAEMON_QUICKSTART.md  DAEMON_READY.md  FEATURES_IMPLEMENTATION.md  LICENSE  MERGE_INCIDENT_REPORT.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  build.bat  build.ps1  build.py  build_config.py  build_simple.py  build_windows.bat  build_windows.ps1  cli.py  config.yml  config_manager.py  dashboard.ps1  focus  focus-gui  focus.bat  focus.db  focus.pyw  focus_app.py  focus_console.py  focus_gui.ps1  focus_gui.py  focus_manager.ps1  (+22 more)
.github/prompts/: Enhanced.prompt.md  enhance.prompt.md
.github/workflows/: build-all-platforms.yml  build-release.yml  build-windows-exe.yml  ci.yml
build-tools/: Makefile  setup.py
data/: daily_tasks.json  daily_tasks.json.backup  daily_tasks.json.corrupt  sync_queue.json
docs/: # Code Citations.md  ALIAS_SETUP_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DAEMON_GUIDE.md  DAEMON_GUI_INTEGRATION.md  DAEMON_QUICKSTART.md  DAEMON_READY.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  OPTIMIZATION_REPORT.md  ORGANIZATION_COMPLETE.md  PLAYLIST_SELECTION_COMPLETE.md  PLAYLIST_SELECTION_IMPLEMENTATION.md  POWERSHELL_SETUP.md  README.md  RELEASE.md  USER_GUIDE.md  VENV_SETUP.md
log/: app.log.1  app.log.2  app.log.3
scripts/: README.md  build_config.py  classical_music.ps1  dev.ps1  focus  focus-bg.ps1  focus-daemon.ps1  focus-daemon.sh  focus.bat  focus.ps1  focus.sh  focus_timer.sh  install-alias.ps1  install.py  install_global_cli.sh  release_manager.py  run_tests.py
src/: __init__.py  __version__.py  app_paths.py  audio_controller.py  cli.py  config_manager.py  core.py  daemon.py  daemon_manager.py  dashboard.py  focus_app.py  focus_console.py  focus_gui.py  google_integration.py  hotkey_manager.py  inline_task_widget.py  logger.py  mpv_installer.py  music_controller.py  notification_manager.py  session_manager.py  system.py  task_dialog.py  task_manager.py  tray_manager.py  ui.py  zeigarnik_manager.py
src/data/: daily_tasks.json
temp/: demo_playlist_selection.py  test_playlist_feature.py  test_playlist_selection.py
test_data/: daily_tasks.json
tests/: __init__.py  conftest.py  debug_gui.py  test_autostart.py  test_core.py  test_google_tasks_sync.py  test_launcher.py  test_utils.py  test_window_geometry.py
vscode-extension/: README.md  package-lock.json  package.json  ultimate-focus-timer-1.0.0.vsix
vscode-extension/src/: extension.ts
